--- a/packages/nouvelle/scss/list/_variables.scss
+++ b/packages/nouvelle/scss/list/_variables.scss
@@ -6,34 +6,34 @@ $kendo-list-border-style: solid !default;
 
 $kendo-list-border-radius: 0px !default;
 
-$kendo-list-font-family: $font-family !default;
-$kendo-list-font-size: $font-size !default;
-$kendo-list-line-height: $line-height !default;
+$kendo-list-font-family: $kendo-font-family !default;
+$kendo-list-font-size: $kendo-font-size-md !default;
+$kendo-list-line-height: $kendo-line-height-md !default;
 
 
 /// The background of the list.
 /// @group list
-$kendo-list-bg: $component-bg !default;
+$kendo-list-bg: $kendo-component-bg !default;
 /// The text color of the list.
 /// @group list
-$kendo-list-text: $component-text !default;
+$kendo-list-text: $kendo-component-text !default;
 /// The border color of the list.
 /// @group list
-$kendo-list-border: $component-border !default;
+$kendo-list-border: $kendo-component-border !default;
 $kendo-list-shadow: null !default;
 
 
-$kendo-list-item-padding-x: k-map-get( $spacing, 2 ) !default;
-$kendo-list-item-padding-y: k-map-get( $spacing, 1 ) !default;
+$kendo-list-item-padding-x: k-map-get( $kendo-spacing, 2 ) !default;
+$kendo-list-item-padding-y: k-map-get( $kendo-spacing, 1 ) !default;
 
 $kendo-list-item-bg: null !default;
-$kendo-list-item-text: $component-text !default;
+$kendo-list-item-text: $kendo-component-text !default;
 
-$kendo-list-item-hover-bg: $hover-bg !default;
-$kendo-list-item-hover-text: $hover-text !default;
+$kendo-list-item-hover-bg: $kendo-hover-bg !default;
+$kendo-list-item-hover-text: $kendo-hover-text !default;
 
-$kendo-list-item-selected-bg: $selected-bg !default;
-$kendo-list-item-selected-text: $selected-text !default;
+$kendo-list-item-selected-bg: $kendo-selected-bg !default;
+$kendo-list-item-selected-text: $kendo-selected-text !default;
 
 $kendo-list-item-focus-bg: null !default;
 $kendo-list-item-focus-text: null !default;
