--- a/packages/nouvelle/scss/list/_theme.scss
+++ b/packages/nouvelle/scss/list/_theme.scss
@@ -2,42 +2,72 @@
 
     // List
     .k-list {
-        @include fill(
-            var(--kendo-list-text),
-            var(--kendo-list-bg),
-            var(--kendo-list-border)
-        );
+        background-color: var( --kendo-list-bg, #{k-if-var( $kendo-list-bg, transparent )} );
+        color: var( --kendo-list-text, #{k-if-var( $kendo-list-text, inherit )} );
+        border-color: var( --kendo-list-border, #{k-if-var( $kendo-list-border, transparent )} );
+    }
+
+
+    // List header
+    .k-list-header {
+        background-color: var( --kendo-list-header-bg, #{k-if-var( $kendo-list-header-bg, transparent )} );
+        color: var( --kendo-list-header-text, #{k-if-var( $kendo-list-header-text, inherit )} );
+        border-color: var( --kendo-list-header-border, #{k-if-var( $kendo-list-header-border, transparent )} );
+        box-shadow: var( --kendo-list-header-shadow, #{k-if-var( $kendo-list-header-shadow, none )} );
     }
 
 
     // List item
-    .k-list-item,
-    .k-list > .k-item {
-        @include fill(
-            var(--kendo-list-item-text),
-            var(--kendo-list-item-bg)
-        );
+    .k-list-item {
+        --kendo-list-item-bg: #{k-var( --kendo-list-item-bg, $kendo-list-item-bg )};
+        --kendo-list-item-text: #{k-var( --kendo-list-item-text, $kendo-list-item-text )};
 
+        background-color: var( --kendo-list-item-bg, #{k-if-var( $kendo-list-item-bg, transparent )} );
+        color: var( --kendo-list-item-text, #{k-if-var( $kendo-list-item-text, inherit )} );
+        box-shadow: var( --kendo-list-item-shadow, #{k-if-var( $kendo-list-item-shadow, none )} );
+
+        // Hover state
         &:hover,
         &.k-hover {
-            @include fill(
-                var(--kendo-list-item-hover-text),
-                var(--kendo-list-item-hover-bg)
-            );
+            background-color: var( --kendo-list-item-hover-bg, #{k-if-var( $kendo-list-item-hover-bg, transparent )} );
+            color: var( --kendo-list-item-hover-text, #{k-if-var( $kendo-list-item-hover-text, inherit )} );
         }
 
-        &.k-selected {
-            @include fill(
-                var(--kendo-list-item-selected-text),
-                var(--kendo-list-item-selected-bg)
-            );
-        }
-
+        // Focus state
         &:focus,
-        &:focus-within
         &.k-focus {
-            box-shadow: var(--kendo-list-item-focus-shadow);
+            background-color: var( --kendo-list-item-focus-bg, #{k-if-var( $kendo-list-item-focus-bg, transparent )} );
+            color: var( --kendo-list-item-focus-text, #{k-if-var( $kendo-list-item-focus-text, inherit )} );
+            box-shadow: var( --kendo-list-item-focus-shadow, #{k-if-var( $kendo-list-item-focus-shadow, none )} );
         }
+
+        // Selected state
+        &.k-selected {
+            background-color: var( --kendo-list-item-selected-bg, #{k-if-var( $kendo-list-item-selected-bg, transparent )} );
+            color: var( --kendo-list-item-selected-text, #{k-if-var( $kendo-list-item-selected-text, inherit )} );
+        }
+
+        // Disabled state
+        &:disabled,
+        &.k-disabled {
+            background-color: var( --kendo-list-item-disabled-bg, #{k-if-var( $kendo-list-item-disabled-bg, transparent )} );
+            color: var( --kendo-list-item-disabled-text, #{k-if-var( $kendo-list-item-disabled-text, inherit )} );
+        }
+    }
+
+
+    // List group item
+    .k-list-group-item {
+        background-color: var( --kendo-list-group-item-bg, #{k-if-var( $kendo-list-group-item-bg, transparent )} );
+        color: var( --kendo-list-group-item-text, #{k-if-var( $kendo-list-group-item-text, inherit )} );
+        border-color: var( --kendo-list-group-item-border, #{k-if-var( $kendo-list-group-item-border, transparent )} );
+    }
+
+
+    // No data
+    .k-no-data {
+        background-color: var( --kendo-list-no-data-bg, #{k-if-var( $kendo-list-no-data-bg, transparent )} );
+        color: var( --kendo-list-no-data-text, #{k-if-var( $kendo-list-no-data-text, inherit )} );
     }
 
 }
