--- a/packages/nouvelle/scss/list/_variables.scss
+++ b/packages/nouvelle/scss/list/_variables.scss
@@ -1,15 +1,113 @@
-$kendo-list-padding-x: 0px !default;
-$kendo-list-padding-y: 0px !default;
-
-$kendo-list-border-width: 1px !default;
-$kendo-list-border-style: solid !default;
-
-$kendo-list-border-radius: 0px !default;
-
+// List
 $kendo-list-font-family: $kendo-font-family !default;
-$kendo-list-font-size: $kendo-font-size-md !default;
-$kendo-list-line-height: $kendo-line-height-md !default;
+$kendo-list-font-weight: normal !default;
 
+$kendo-list-header-border-width: 1px !default;
+$kendo-list-header-font-weight: var( --kendo-font-weight-bold, bold ) !default;
+
+$kendo-list-item-spacing: k-map-get( $kendo-spacing, 2 ) !default;
+
+$kendo-list-group-item-border-width: 1px !default;
+$kendo-list-group-item-spacing: k-map-get( $kendo-spacing, 2 ) !default;
+$kendo-list-group-item-font-weight: var( --kendo-font-weight-bold, bold ) !default;
+
+$kendo-list-sm-font-size: k-var( --kendo-font-size-sm, $kendo-font-size-sm ) !default;
+$kendo-list-sm-line-height: k-var( --kendo-line-height-sm, $kendo-line-height-sm ) !default;
+$kendo-list-sm-header-padding-x: k-map-get( $kendo-spacing, 2 ) !default;
+$kendo-list-sm-header-padding-y: k-map-get( $kendo-spacing, 1 ) !default;
+$kendo-list-sm-header-font-size: k-var( --kendo-font-size-sm, $kendo-font-size-sm ) !default;
+$kendo-list-sm-header-line-height: k-var( --kendo-line-height-sm, $kendo-line-height-sm ) !default;
+$kendo-list-sm-item-padding-x: k-map-get( $kendo-spacing, 2 ) !default;
+$kendo-list-sm-item-padding-y: k-map-get( $kendo-spacing, 1 ) !default;
+$kendo-list-sm-item-font-size: k-var( --kendo-font-size-sm, $kendo-font-size-sm ) !default;
+$kendo-list-sm-item-line-height: k-var( --kendo-line-height-sm, $kendo-line-height-sm ) !default;
+$kendo-list-sm-group-item-padding-x: k-map-get( $kendo-spacing, 2 ) !default;
+$kendo-list-sm-group-item-padding-y: k-map-get( $kendo-spacing, 1 ) !default;
+$kendo-list-sm-group-item-font-size: k-var( --kendo-font-size-sm, $kendo-font-size-sm ) !default;
+$kendo-list-sm-group-item-line-height: k-var( --kendo-line-height-sm, $kendo-line-height-sm ) !default;
+
+$kendo-list-md-font-size: k-var( --kendo-font-size-md, $kendo-font-size-md ) !default;
+$kendo-list-md-line-height: k-var( --kendo-line-height-md, $kendo-line-height-md ) !default;
+$kendo-list-md-header-padding-x: k-map-get( $kendo-spacing, 3 ) !default;
+$kendo-list-md-header-padding-y: k-map-get( $kendo-spacing, 2 ) !default;
+$kendo-list-md-header-font-size: k-var( --kendo-font-size-md, $kendo-font-size-md ) !default;
+$kendo-list-md-header-line-height: k-var( --kendo-line-height-md, $kendo-line-height-md ) !default;
+$kendo-list-md-item-padding-x: k-map-get( $kendo-spacing, 3 ) !default;
+$kendo-list-md-item-padding-y: k-map-get( $kendo-spacing, 2 ) !default;
+$kendo-list-md-item-font-size: k-var( --kendo-font-size-md, $kendo-font-size-md ) !default;
+$kendo-list-md-item-line-height: k-var( --kendo-line-height-md, $kendo-line-height-md ) !default;
+$kendo-list-md-group-item-padding-x: k-map-get( $kendo-spacing, 3 ) !default;
+$kendo-list-md-group-item-padding-y: k-map-get( $kendo-spacing, 2 ) !default;
+$kendo-list-md-group-item-font-size: k-var( --kendo-font-size-md, $kendo-font-size-md ) !default;
+$kendo-list-md-group-item-line-height: k-var( --kendo-line-height-md, $kendo-line-height-md ) !default;
+
+$kendo-list-lg-font-size: k-var( --kendo-font-size-lg, $kendo-font-size-lg ) !default;
+$kendo-list-lg-line-height: k-var( --kendo-line-height-lg, $kendo-line-height-lg ) !default;
+$kendo-list-lg-header-padding-x: k-map-get( $kendo-spacing, 4 ) !default;
+$kendo-list-lg-header-padding-y: k-map-get( $kendo-spacing, 3 ) !default;
+$kendo-list-lg-header-font-size: k-var( --kendo-font-size-lg, $kendo-font-size-lg ) !default;
+$kendo-list-lg-header-line-height: k-var( --kendo-line-height-lg, $kendo-line-height-lg ) !default;
+$kendo-list-lg-item-padding-x: k-map-get( $kendo-spacing, 4 ) !default;
+$kendo-list-lg-item-padding-y: k-map-get( $kendo-spacing, 3 ) !default;
+$kendo-list-lg-item-font-size: k-var( --kendo-font-size-lg, $kendo-font-size-lg ) !default;
+$kendo-list-lg-item-line-height: k-var( --kendo-line-height-lg, $kendo-line-height-lg ) !default;
+$kendo-list-lg-group-item-padding-x: k-map-get( $kendo-spacing, 4 ) !default;
+$kendo-list-lg-group-item-padding-y: k-map-get( $kendo-spacing, 3 ) !default;
+$kendo-list-lg-group-item-font-size: k-var( --kendo-font-size-lg, $kendo-font-size-lg ) !default;
+$kendo-list-lg-group-item-line-height: k-var( --kendo-line-height-lg, $kendo-line-height-lg ) !default;
+
+
+// Kendo list sizes
+$kendo-list-sizes: (
+    sm: (
+        font-size: $kendo-list-sm-font-size,
+        line-height: $kendo-list-sm-line-height,
+        header-padding-x: $kendo-list-sm-header-padding-x,
+        header-padding-y: $kendo-list-sm-header-padding-y,
+        header-font-size: $kendo-list-sm-header-font-size,
+        header-line-height: $kendo-list-sm-header-line-height,
+        item-padding-x: $kendo-list-sm-item-padding-x,
+        item-padding-y: $kendo-list-sm-item-padding-y,
+        item-font-size: $kendo-list-sm-item-font-size,
+        item-line-height: $kendo-list-sm-item-line-height,
+        group-item-padding-x: $kendo-list-sm-group-item-padding-x,
+        group-item-padding-y: $kendo-list-sm-group-item-padding-y,
+        group-item-font-size: $kendo-list-sm-group-item-font-size,
+        group-item-line-height: $kendo-list-sm-group-item-line-height
+    ),
+    md: (
+        font-size: $kendo-list-md-font-size,
+        line-height: $kendo-list-md-line-height,
+        header-padding-x: $kendo-list-md-header-padding-x,
+        header-padding-y: $kendo-list-md-header-padding-y,
+        header-font-size: $kendo-list-md-header-font-size,
+        header-line-height: $kendo-list-md-header-line-height,
+        item-padding-x: $kendo-list-md-item-padding-x,
+        item-padding-y: $kendo-list-md-item-padding-y,
+        item-font-size: $kendo-list-md-item-font-size,
+        item-line-height: $kendo-list-md-item-line-height,
+        group-item-padding-x: $kendo-list-md-group-item-padding-x,
+        group-item-padding-y: $kendo-list-md-group-item-padding-y,
+        group-item-font-size: $kendo-list-md-group-item-font-size,
+        group-item-line-height: $kendo-list-md-group-item-line-height
+    ),
+    lg: (
+        font-size: $kendo-list-lg-font-size,
+        line-height: $kendo-list-lg-line-height,
+        header-padding-x: $kendo-list-lg-header-padding-x,
+        header-padding-y: $kendo-list-lg-header-padding-y,
+        header-font-size: $kendo-list-lg-header-font-size,
+        header-line-height: $kendo-list-lg-header-line-height,
+        item-padding-x: $kendo-list-lg-item-padding-x,
+        item-padding-y: $kendo-list-lg-item-padding-y,
+        item-font-size: $kendo-list-lg-item-font-size,
+        item-line-height: $kendo-list-lg-item-line-height,
+        group-item-padding-x: $kendo-list-lg-group-item-padding-x,
+        group-item-padding-y: $kendo-list-lg-group-item-padding-y,
+        group-item-font-size: $kendo-list-lg-group-item-font-size,
+        group-item-line-height: $kendo-list-lg-group-item-line-height
+    )
+) !default;
 
 /// The background of the list.
 /// @group list
@@ -20,59 +118,32 @@ $kendo-list-text: $kendo-component-text !default;
 /// The border color of the list.
 /// @group list
 $kendo-list-border: $kendo-component-border !default;
-$kendo-list-shadow: null !default;
 
-
-$kendo-list-item-padding-x: k-map-get( $kendo-spacing, 2 ) !default;
-$kendo-list-item-padding-y: k-map-get( $kendo-spacing, 1 ) !default;
+$kendo-list-header-bg: $kendo-component-bg !default;
+$kendo-list-header-text: $kendo-component-text !default;
+$kendo-list-header-border: $kendo-component-border !default;
+$kendo-list-header-shadow: null !default;
 
 $kendo-list-item-bg: null !default;
 $kendo-list-item-text: $kendo-component-text !default;
+$kendo-list-item-shadow: null !default;
 
 $kendo-list-item-hover-bg: $kendo-hover-bg !default;
 $kendo-list-item-hover-text: $kendo-hover-text !default;
 
+$kendo-list-item-focus-bg: null !default;
+$kendo-list-item-focus-text: null !default;
+$kendo-list-item-focus-shadow: inset 0 0 0 2px rgba( black, .8 ) !default;
+
 $kendo-list-item-selected-bg: $kendo-selected-bg !default;
 $kendo-list-item-selected-text: $kendo-selected-text !default;
 
-$kendo-list-item-focus-bg: null !default;
-$kendo-list-item-focus-text: null !default;
-$kendo-list-item-focus-shadow: inset 0 0 0 2px rgba( black, .13 ) !default;
+$kendo-list-item-disabled-bg: null !default;
+$kendo-list-item-disabled-text: null !default;
 
+$kendo-list-group-item-bg: null !default;
+$kendo-list-group-item-text: null !default;
+$kendo-list-group-item-border: null !default;
 
-
-
-// Expose
-:root {
-    --kendo-list-padding-x: #{$kendo-list-padding-x};
-    --kendo-list-padding-y: #{$kendo-list-padding-y};
-    --kendo-list-border-width: #{$kendo-list-border-width};
-    --kendo-list-border-style: #{$kendo-list-border-style};
-
-    --kendo-list-border-radius: #{$kendo-list-border-radius};
-
-    --kendo-list-font-family: #{$kendo-list-font-family};
-    --kendo-list-font-size: #{$kendo-list-font-size};
-    --kendo-list-line-height: #{$kendo-list-line-height};
-
-    --kendo-list-bg: #{$kendo-list-bg};
-    --kendo-list-text: #{$kendo-list-text};
-    --kendo-list-border: #{$kendo-list-border};
-    --kendo-list-shadow: #{$kendo-list-shadow};
-
-    --kendo-list-item-padding-x: #{$kendo-list-item-padding-x};
-    --kendo-list-item-padding-y: #{$kendo-list-item-padding-y};
-
-    --kendo-list-item-bg: #{$kendo-list-item-bg};
-    --kendo-list-item-text: #{$kendo-list-item-text};
-
-    --kendo-list-item-hover-bg: #{$kendo-list-item-hover-bg};
-    --kendo-list-item-hover-text: #{$kendo-list-item-hover-text};
-
-    --kendo-list-item-selected-bg: #{$kendo-list-item-selected-bg};
-    --kendo-list-item-selected-text: #{$kendo-list-item-selected-text};
-
-    --kendo-list-item-focus-bg: #{$kendo-list-item-focus-bg};
-    --kendo-list-item-focus-text: #{$kendo-list-item-focus-text};
-    --kendo-list-item-focus-shadow: #{$kendo-list-item-focus-shadow};
-}
+$kendo-list-no-data-bg: null !default;
+$kendo-list-no-data-text: null !default;
