--- a/packages/nouvelle/scss/dropdowngrid/_layout.scss
+++ b/packages/nouvelle/scss/dropdowngrid/_layout.scss
@@ -1,4 +1,9 @@
-@mixin kendo-dropdowngrid--layout() {}
+@mixin kendo-dropdowngrid--layout() {
+
+    // Dropdown grid
+    .k-dropdown-grid {}
+
+}
 
 
 
