--- a/packages/nouvelle/scss/dropdowntree/_layout.scss
+++ b/packages/nouvelle/scss/dropdowntree/_layout.scss
@@ -1,4 +1,9 @@
-@mixin kendo-dropdowntree--layout() {}
+@mixin kendo-dropdowntree--layout() {
+
+    // Dropdown tree
+    .k-dropdown-tree {}
+
+}
 
 
 
