--- a/packages/nouvelle/scss/bottom-nav/index.scss
+++ b/packages/nouvelle/scss/bottom-nav/index.scss
@@ -1,6 +1,6 @@
 // Module meta
 $_kendo-module-meta: (
-    name: "bottom-nav",
+    name: "bottom-navigation",
     dependencies: (
         "icon"
     )
@@ -19,7 +19,7 @@ $_kendo-module-meta: (
 
 // Expose
 @mixin bottom-nav-styles() {
-    @include module-render( "bottom-nav" ) {
+    @include module-render( "bottom-navigation" ) {
         @include kendo-bottom-nav--layout();
         @include kendo-bottom-nav--extended-layout();
         @include kendo-bottom-nav--theme();
