--- a/packages/nouvelle/scss/breadcrumb/_layout.scss
+++ b/packages/nouvelle/scss/breadcrumb/_layout.scss
@@ -1,8 +1,119 @@
 @mixin kendo-breadcrumb--layout() {
 
-    // sass-lint:disable-block no-important no-ids
-    #test-area .k-breadcrumb {
-        display: none !important;
+    // Breadcrumb
+    .k-breadcrumb {
+        margin-inline: var( --kendo-breadcrumb-margin-x, #{k-if-var( $kendo-breadcrumb-margin-x, 0 )} );
+        margin-block: var( --kendo-breadcrumb-margin-y, #{k-if-var( $kendo-breadcrumb-margin-y, 0 )} );
+        padding-inline: var( --kendo-breadcrumb-padding-x, #{k-if-var( $kendo-breadcrumb-padding-x, 0 )} );
+        padding-block: var( --kendo-breadcrumb-padding-y, #{k-if-var( $kendo-breadcrumb-padding-y, 0 )} );
+        border-width: var( --kendo-breadcrumb-border-width, #{k-if-var( $kendo-breadcrumb-border-width, 0 )} );
+        border-style: solid;
+        box-sizing: border-box;
+        outline: 0;
+        font-family: var( --kendo-breadcrumb-font-family, #{k-if-var( $kendo-breadcrumb-font-family, inherit )} );
+        font-size: var( --kendo-breadcrumb-font-size, #{k-if-var( $kendo-breadcrumb-font-size, 1rem )} );
+        line-height: var( --kendo-breadcrumb-line-height, #{k-if-var( $kendo-breadcrumb-line-height, normal )} );
+        display: flex;
+        flex-direction: row;
+        -webkit-touch-callout: none;
+        -webkit-tap-highlight-color: $kendo-color-rgba-transparent;
+
+        *,
+        *::before,
+        *::after {
+            box-sizing: border-box;
+        }
+    }
+
+
+    // Breadcrumb container
+    .k-breadcrumb-container,
+    .k-breadcrumb-root-item-container {
+        margin: 0;
+        padding: 0;
+        list-style: none;
+        display: flex;
+        flex-flow: row nowrap;
+        overflow: hidden;
+    }
+
+    .k-breadcrumb-container {
+        // TODO: use !k-flex-wrap in rendering
+        &.k-flex-wrap {
+            flex-wrap: wrap;
+        }
+    }
+    .k-breadcrumb-root-item-container {
+        align-items: flex-start;
+        flex-shrink: 0;
+    }
+
+
+    // Breadcrumb item
+    .k-breadcrumb-item {
+        vertical-align: middle;
+        display: inline-flex;
+        flex-direction: row;
+        align-items: center;
+        overflow: hidden;
+    }
+
+
+    // Breadcrumb root item
+    .k-breadcrumb-root-item {
+        flex-shrink: 0;
+    }
+
+
+    // Breadcrumb links
+    .k-breadcrumb-link,
+    .k-breadcrumb-root-link {
+        @include border-radius( var( --kendo-breadcrumb-border-radius, #{k-if-var( $kendo-breadcrumb-link-border-radius, 0 )} ) );
+        padding-inline: var( --kendo-breadcrumb-link-padding-x, #{k-if-var( $kendo-breadcrumb-link-padding-x, 0 )} );
+        padding-block: var( --kendo-breadcrumb-link-padding-y, #{k-if-var( $kendo-breadcrumb-link-padding-y, 0 )} );
+        color: inherit;
+        text-decoration: none;
+        white-space: nowrap;
+        outline: none;
+        cursor: pointer;
+        position: relative;
+        display: inline-flex;
+        align-items: center;
+        align-self: stretch;
+        overflow: hidden;
+        transition: var( --kendo-transition, none );
+    }
+
+    .k-breadcrumb-root-link {
+        margin-inline-end: var( --kendo-breadcrumb-root-link-spacing, #{k-if-var( $kendo-breadcrumb-root-link-spacing, 0 )} );
+    }
+
+    .k-breadcrumb-link > .k-image,
+    .k-breadcrumb-icontext-link .k-icon {
+        margin-inline-end: var( --kendo-breadcrumb-link-icon-spacing, #{k-if-var( $kendo-breadcrumb-link-icon-spacing, 0 )} );
+    }
+
+    .k-breadcrumb-icon-link {
+        padding-inline: var( --kendo-breadcrumb-icon-link-padding-x, #{k-if-var( $kendo-breadcrumb-icon-link-padding-x, 0 )} );
+        padding-block: var( --kendo-breadcrumb-icon-link-padding-y, #{k-if-var( $kendo-breadcrumb-icon-link-padding-y, 0 )} );
+    }
+
+
+    // Breadcrumb delimiter
+    .k-breadcrumb-delimiter,
+    .k-breadcrumb-delimiter-icon {
+        color: inherit;
+        font-size: var( --kendo-breadcrumb-delimiter-icon-font-size, #{k-if-var( $kendo-breadcrumb-delimiter-icon-font-size, inherit )} );
+    }
+
+
+    // Editing
+    .k-breadcrumb-input-container {
+        width: 100%;
+
+        .k-breadcrumb-input-container {
+            border-color: transparent;
+        }
     }
 
 }
