--- a/packages/nouvelle/scss/button/_variables.scss
+++ b/packages/nouvelle/scss/button/_variables.scss
@@ -1,109 +1,149 @@
-$kendo-button-padding-x: k-map-get( $kendo-spacing, 2 ) !default;
-$kendo-button-padding-y: k-map-get( $kendo-spacing, 1 ) !default;
-
 $kendo-button-border-width: 1px !default;
 $kendo-button-border-style: solid !default;
 
-$kendo-button-border-radius: k-map-get( $kendo-spacing, 1 ) !default;
-
 $kendo-button-font-family: $kendo-font-family !default;
-$kendo-button-font-size: $kendo-font-size-md !default;
-$kendo-button-line-height: $kendo-line-height-md !default;
+$kendo-button-font-weight: null !default;
 
+$kendo-button-sizes: (
+    sm: (
+        padding-x: k-map-get( $kendo-spacing, 2),
+        padding-y: k-map-get( $kendo-spacing, 1),
+        font-size: $kendo-font-size-sm,
+        line-height: $kendo-line-height-sm
+    ),
+    md: (
+        padding-x: k-map-get( $kendo-spacing, 2.5),
+        padding-y: k-map-get( $kendo-spacing, 1.5),
+        font-size: $kendo-font-size-md,
+        line-height: $kendo-line-height-md
+    ),
+    lg: (
+        padding-x: k-map-get( $kendo-spacing, 3),
+        padding-y: k-map-get( $kendo-spacing, 2),
+        font-size: $kendo-font-size-lg,
+        line-height: $kendo-line-height-lg
+    )
+) !default;
 
-/// The background of the button.
-/// @group button
-$kendo-button-bg: $kendo-interactive-bg !default;
-/// The text color of the button.
-/// @group button
-$kendo-button-text: $kendo-interactive-text !default;
-/// The border color of the button.
-/// @group button
-$kendo-button-border: $kendo-interactive-border !default;
-/// The background gradient of the button.
-/// @group button
-$kendo-button-gradient: $kendo-interactive-gradient !default;
-$kendo-button-shadow: null !default;
+$kendo-button-ui-states: (
+    hover,
+    focus,
+    // focus-hover,
+    active,
+    // active-hover,
+    selected,
+    // selected-hover,
+    disabled
+) !default;
 
-/// The background of hovered buttons.
-/// @group button
-$kendo-button-hover-bg: k-try-shade( $kendo-button-bg, .5 ) !default;
-/// The text color of hovered buttons.
-/// @group button
-$kendo-button-hover-text: $kendo-button-text !default;
-/// The border color of hovered buttons.
-/// @group button
-$kendo-button-hover-border: $kendo-button-border !default;
-/// The background gradient of hovered buttons.
-/// @group button
-$kendo-button-hover-gradient: $kendo-button-gradient !default;
-$kendo-button-hover-shadow: null !default;
+$kendo-button-theme-matrix: (
+    solid-neutral: (
+        PALETTE: neutral,
+        DEFAULT: ( 50, 700, 200 ),
+        hover: ( 100, 700, 300 ),
+        focus: ( 200, 800, 400 ),
+        focus-hover: ( 200, 800, 400 ),
+        active: ( 300, 900, 500 ),
+        active-hover: ( 300, 900, 500 ),
+        selected: (300, 900, 500 ),
+        selected-hover: (300, 900, 500 ),
+        disabled: ( 100, 700, 300 )
+    ),
+    solid-THEME_COLOR: (
+        PALETTE: THEME_COLOR,
+        DEFAULT: ( 500, 0, 700 ),
+        hover: ( 600, 0, 700 ),
+        focus: ( 600, 0, 700 ),
+        focus-hover: ( 600, 0, 700 ),
+        active: ( 700, 0, 800 ),
+        active-hover: ( 700, 0, 800 ),
+        selected: ( 700, 0, 800 ),
+        selected-hover: ( 700, 0, 800 ),
+        disabled: ( 500, 100, 600 )
+    ),
+    flat-neutral: (
+        PALETTE: neutral,
+        DEFAULT: ( transparent, 500, transparent ),
+        hover: ( 50, 600, 50 ),
+        focus: ( 100, 700, 100 ),
+        focus-hover: ( 100, 700, 100 ),
+        active: ( 200, 800, 200 ),
+        active-hover: ( 200, 800, 200 ),
+        selected: ( 200, 800, 200 ),
+        selected-hover: ( 200, 800, 200 ),
+        disabled: ( 0, 400, 0 )
+    ),
+    flat-THEME_COLOR: (
+        PALETTE: THEME_COLOR,
+        DEFAULT: ( transparent, 500, transparent ),
+        hover: ( 50, 600, 50 ),
+        focus: ( 100, 700, 100 ),
+        focus-hover: ( 100, 700, 100 ),
+        active: ( 200, 800, 200 ),
+        active-hover: ( 200, 800, 200 ),
+        selected: ( 200, 800, 200 ),
+        selected-hover: ( 200, 800, 200 ),
+        disabled: ( 0, 400, 0 )
+    ),
+    outline-neutral: (
+        PALETTE: neutral,
+        DEFAULT: ( transparent, 500, 500 ),
+        hover: ( 600, 0, 600 ),
+        focus: ( 700, 0, 700 ),
+        focus-hover: ( 700, 0, 700 ),
+        active: ( 800, 0, 800 ),
+        active-hover: ( 800, 0, 800 ),
+        selected: ( 800, 0, 800 ),
+        selected-hover: ( 800, 0, 800 ),
+        disabled: ( 0, 400, 400 )
+    ),
+    outline-THEME_COLOR: (
+        PALETTE: THEME_COLOR,
+        DEFAULT: ( transparent, 500, 500 ),
+        hover: ( 600, 0, 600 ),
+        focus: ( 700, 0, 700 ),
+        focus-hover: ( 700, 0, 700 ),
+        active: ( 800, 0, 800 ),
+        active-hover: ( 800, 0, 800 ),
+        selected: ( 800, 0, 800 ),
+        selected-hover: ( 800, 0, 800 ),
+        disabled: ( 0, 400, 400 )
+    ),
+    link-neutral: (
+        PALETTE: neutral,
+        DEFAULT: ( null, 500, transparent ),
+        hover: ( null, 600, null ),
+        focus: ( null, 700, null, null, null, 1px solid currentColor ),
+        focus-hover: ( null, 700, null ),
+        active: ( null, 800, null ),
+        active-hover: ( null, 800, null ),
+        selected: ( null, 800, null ),
+        selected-hover: ( null, 800, null ),
+        disabled: ( null, 400, null )
+    ),
+    link-THEME_COLOR: (
+        PALETTE: THEME_COLOR,
+        DEFAULT: ( null, 500, transparent ),
+        hover: ( null, 600, null ),
+        focus: ( null, 700, null ),
+        focus-hover: ( null, 700, null ),
+        active: ( null, 800, null ),
+        active-hover: ( null, 800, null ),
+        selected: ( null, 800, null ),
+        selected-hover: ( null, 800, null ),
+        disabled: ( null, 400, null )
+    )
+) !default;
 
-/// The background color of focus buttons.
-/// @group button
-$kendo-button-focus-bg: $kendo-button-hover-bg !default;
-/// The text color of focus buttons.
-/// @group button
-$kendo-button-focus-text: $kendo-button-hover-text !default;
-/// The border color of focus buttons.
-/// @group button
-$kendo-button-focus-border: $kendo-button-hover-border !default;
-/// The background gradient of focus buttons.
-/// @group button
-$kendo-button-focus-gradient: $kendo-button-hover-gradient !default;
-$kendo-button-focus-shadow: 0 0 0 2px rgba( if( $kendo-is-dark-theme, $kendo-color-white, $kendo-color-black ), .08 ) !default;
+$kendo-button-palette-matrix: (
+    primary: marsala,
+    info: primerBlue,
+    success: primerGreen,
+    warning: primerOrange,
+    error: primerRed
+) !default;
 
-/// The background color of pressed buttons.
-/// @group button
-$kendo-button-active-bg: k-try-shade( $kendo-button-bg, 1 ) !default;
-/// The text color of pressed buttons.
-/// @group button
-$kendo-button-active-text: $kendo-button-text !default;
-/// The border color of pressed buttons.
-/// @group button
-$kendo-button-active-border: $kendo-button-border !default;
-/// The background gradient of pressed buttons.
-/// @group button
-$kendo-button-active-gradient: $kendo-button-gradient !default;
-$kendo-button-active-shadow: null !default;
-
-
-
-
-// Expose
-:root {
-    --kendo-button-padding-x: #{$kendo-button-padding-x};
-    --kendo-button-padding-y: #{$kendo-button-padding-y};
-    --kendo-button-border-width: #{$kendo-button-border-width};
-    --kendo-button-border-style: #{$kendo-button-border-style};
-
-    --kendo-button-border-radius: #{$kendo-button-border-radius};
-
-    --kendo-button-font-family: #{$kendo-button-font-family};
-    --kendo-button-font-size: #{$kendo-button-font-size};
-    --kendo-button-line-height: #{$kendo-button-line-height};
-
-    --kendo-button-bg: #{$kendo-button-bg};
-    --kendo-button-text: #{$kendo-button-text};
-    --kendo-button-border: #{$kendo-button-border};
-    --kendo-button-gradient: #{$kendo-button-gradient};
-    --kendo-button-shadow: #{$kendo-button-shadow};
-
-    --kendo-button-hover-bg: #{$kendo-button-hover-bg};
-    --kendo-button-hover-text: #{$kendo-button-hover-text};
-    --kendo-button-hover-border: #{$kendo-button-hover-border};
-    --kendo-button-hover-gradient: #{$kendo-button-hover-gradient};
-    --kendo-button-hover-shadow: #{$kendo-button-hover-shadow};
-
-    --kendo-button-focus-bg: #{$kendo-button-focus-bg};
-    --kendo-button-focus-text: #{$kendo-button-focus-text};
-    --kendo-button-focus-border: #{$kendo-button-focus-border};
-    --kendo-button-focus-gradient: #{$kendo-button-focus-gradient};
-    --kendo-button-focus-shadow: #{$kendo-button-focus-shadow};
-
-    --kendo-button-active-bg: #{$kendo-button-active-bg};
-    --kendo-button-active-text: #{$kendo-button-active-text};
-    --kendo-button-active-border: #{$kendo-button-active-border};
-    --kendo-button-active-gradient: #{$kendo-button-active-gradient};
-    --kendo-button-active-shadow: #{$kendo-button-active-shadow};
-}
+$kendo-button-theme: k-process-variant-matrices(
+    $kendo-button-theme-matrix,
+    $kendo-button-palette-matrix
+) !default;
