--- a/packages/nouvelle/scss/dialog/_theme.scss
+++ b/packages/nouvelle/scss/dialog/_theme.scss
@@ -1,4 +1,21 @@
-@mixin kendo-dialog--theme() {}
+@mixin kendo-dialog--theme() {
+
+    // Dialog
+    .k-dialog {}
+
+
+    // Dialog titlebar
+    .k-dialog-titlebar {}
+
+
+    // Dialog content
+    .k-dialog-content {}
+
+
+    // Dialog actions
+    .k-dialog-actions {}
+
+}
 
 
 
