--- a/packages/nouvelle/scss/split-button/_theme.scss
+++ b/packages/nouvelle/scss/split-button/_theme.scss
@@ -1,4 +1,9 @@
-@mixin kendo-split-button--theme() {}
+@mixin kendo-split-button--theme() {
+
+    // Split button
+    .k-split-button {}
+
+}
 
 
 
