--- a/packages/nouvelle/scss/validator/_layout.scss
+++ b/packages/nouvelle/scss/validator/_layout.scss
@@ -1,8 +1,16 @@
 @mixin kendo-validator--layout() {
 
-    // sass-lint:disable-block no-important no-ids
-    #test-area .k-validator {
-        display: none !important;
+    .k-validator-tooltip {
+        margin-block-start: calc( var( --kendo-validator-tooltip-margin, #{$kendo-tooltip-callout-size} ) + #{$kendo-tooltip-border-width} );
+        width: auto;
+        white-space: normal;
+        display: flex;
+        align-items: center;
+        // NOTE: This works around popup / tooltip stacking issue
+        z-index: 9999;
+    }
+    .k-grid .k-validator-tooltip {
+        max-width: 300px;
     }
 
 }
