--- a/packages/fluent/scss/core/module-system/_components.scss
+++ b/packages/fluent/scss/core/module-system/_components.scss
@@ -63,6 +63,7 @@ $components: (
     "dateinput",
     "datepicker",
     "timepicker",
+    "timedurationpicker",
     "datetimepicker",
     "daterangepicker",
     "dropdowngrid",
