--- a/packages/classic/scss/timeselector/_variables.scss
+++ b/packages/classic/scss/timeselector/_variables.scss
@@ -8,8 +8,8 @@ $time-selector-bg: $component-bg !default;
 $time-selector-text: $component-text !default;
 $time-selector-border: $component-border !default;
 
-$time-selector-header-padding-x: k-map-get( $spacing, 1 ) !default;
-$time-selector-header-padding-y: k-map-get( $spacing, 1 ) !default;
+$time-selector-header-padding-x: $actions-padding-x !default;
+$time-selector-header-padding-y: $actions-padding-y !default;
 $time-selector-header-border-width: 0px !default;
 
 $time-list-width: 4em !default;
