fix(signature): update signature line disabled state to match design

--- a/packages/fluent/scss/signature/_theme.scss
+++ b/packages/fluent/scss/signature/_theme.scss
@@ -8,6 +8,14 @@
         .k-signature-line {
             border-bottom-color: var( --kendo-signature-line-color, #{$kendo-signature-line-color} );
         }
+
+        &:disabled,
+        &[disabled],
+        &.k-disabled {
+            .k-signature-line {
+                border-bottom-color: var( --kendo-signature-line-disabled-color, #{$kendo-signature-line-disabled-color} );
+            }
+        }
     }
 
 }
