--- a/packages/material/scss/table/_variables.scss
+++ b/packages/material/scss/table/_variables.scss
@@ -26,26 +26,35 @@ $kendo-table-cell-padding-x: null !default;
 /// @group table
 $kendo-table-cell-padding-y: null !default;
 
+$kendo-table-cell-padding-x-sm: k-map-get( $spacing, 2 ) + k-map-get( $spacing, thin );
+$kendo-table-cell-padding-y-sm: k-map-get( $spacing, 1 );
+
+$kendo-table-cell-padding-x-md: k-map-get( $spacing, 6 );
+$kendo-table-cell-padding-y-md: k-map-get( $spacing, 2 ) + k-map-get( $spacing, thin );
+
+$kendo-table-cell-padding-x-lg: k-map-get( $spacing, 4 );
+$kendo-table-cell-padding-y-lg: k-map-get( $spacing, 2 ) + k-map-get( $spacing, thin );
+
 /// The sizes of the table.
 /// @group table
 $kendo-table-sizes: (
     sm: (
         font-size: $font-size-md,
-        line-height: k-math-div( 20, 14 ),
-        cell-padding-x: k-map-get( $spacing, 4 ),
-        cell-padding-y: k-map-get( $spacing, 2 ) + k-map-get( $spacing, thin )
+        line-height: $line-height-md,
+        cell-padding-x: $kendo-table-cell-padding-x-sm,
+        cell-padding-y: $kendo-table-cell-padding-y-sm
     ),
     md: (
         font-size: $font-size-md,
-        line-height: k-math-div( 20, 14 ),
-        cell-padding-x: k-map-get( $spacing, 4 ),
-        cell-padding-y: k-map-get( $spacing, 2 )
+        line-height: $line-height-md,
+        cell-padding-x: $kendo-table-cell-padding-x-md,
+        cell-padding-y: $kendo-table-cell-padding-y-md
     ),
     lg: (
         font-size: $font-size-md,
-        line-height: k-math-div( 20, 14 ),
-        cell-padding-x: k-map-get( $spacing, 4 ),
-        cell-padding-y: k-map-get( $spacing, 2 ) + k-map-get( $spacing, thin )
+        line-height: $line-height-md,
+        cell-padding-x: $kendo-table-cell-padding-x-lg,
+        cell-padding-y: $kendo-table-cell-padding-y-lg
     )
 ) !default;
 
